<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".UserLoginActivity"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top"
        >


    <EditText
            android:hint="@string/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/eTusername"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:paddingHorizontal="75dp"
            />

    <EditText
            android:hint="@string/pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/eTpwd"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:paddingHorizontal="75dp"
            />

    <Button
            android:text="@string/login"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            />

    <TextView
            android:text="@string/forgotpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tVforgotpwd"
            android:textStyle="italic"
            android:textSize="8dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            />
</LinearLayout>