<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ScanActivity"
        >

    <androidx.camera.view.CameraView
            android:id="@+id/view_finder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_above="@id/btnCapture"/>

    <Button
            android:id="@+id/btnScan"
            android:layout_height="wrap_content"
            android:layout_width="96dp"
            android:text="@string/scan"
            android:layout_below="@id/view_finder"
            android:layout_alignParentBottom="true"
            />

    <Button
            android:id="@+id/btnCapture"
            android:layout_height="wrap_content"
            android:layout_width="96dp"
            android:text="@string/capture"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

    <Button
            android:id="@+id/btnExit"
            android:layout_height="wrap_content"
            android:layout_width="96dp"
            android:text="@string/exit"
            android:layout_below="@id/view_finder"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            />

</RelativeLayout>